<resources>
    //expense interface
    <string name="app_name">Money Guard</string>
    <string name="textView">Expenses</string>
    <string name="textView2">Dashboard</string>
    <string name="textView3">Incomes</string>
    <string name="textView4">Expenses</string>
    <string name="textView5">Date</string>
    <string name="textView8">Reason</string>
    <string name="textView9">10.02.2023</string>
    <string name="textView10">Ammount</string>
    <string name="textView11">2500</string>
    <string name="textView12">20.02.2023</string>
    <string name="textView13">Dinner</string>
    <string name="textView14">Dress</string>
    <string name="textView15">1500</string>

    //income interface
    <string name="textView1">Incomes</string>
    <string name="textView16">Date</string>
    <string name="textView17">Reason</string>
    <string name="textView18">03.02.2023</string>
    <string name="textView19">Ammount</string>
    <string name="textView20">50000</string>
    <string name="textView21">15.02.2023</string>
    <string name="textView22">Salary</string>
    <string name="textView23">Interest</string>
    <string name="textView24">35000</string>

    //expense_delete_update
    <string name="textView25">Amount</string>
    <string name="textView26">Reason</string>
    <string name="textView27">Date</string>
    <string name="Plaintext">20.02.2023</string>
    <string name="Plaintext2">Dinner</string>
    <string name="Plaintext3">2500</string>
    <string name="button1">Update</string>
    <string name="button2">Delete</string>


    //income_delete_update
    <string name="textView28">Amount</string>
    <string name="textView29">Reason</string>
    <string name="textView30">Date</string>
    <string name="Plaintext4">03.02.2023</string>
    <string name="Plaintext5">Salary</string>
    <string name="Plaintext6">50000</string>
    <string name="button3">Update</string>
    <string name="button4">Delete</string>

    //login
    <string name="textView31">Login</string>
    <string name="Plaintext9">User Name</string>
    <string name="Plaintext8">Password</string>
    <string name="textView32">Forgot password?</string>
    <string name="button5">Sign In</string>
    <string name="button6">SignUp</string>
    <string name="textView33">Do not have an account? Create your account</string>

    //signup
    <string name="textView44">SignUp</string>
    <string name="textView45">I read and agree to Terms and Conditions</string>
    <string name="textView46">Already have an account? Sign In</string>
    <string name="Plaintext10">Name</string>
    <string name="Plaintext11">email</string>
    <string name="Plaintext12">Password</string>
    <string name="Plaintext13">Username</string>
    <string name="button7">CREATE ACCOUNT</string>

    //user profile
    <string name="textView47">User Profile</string>
    <string name="textView48">Name</string>
    <string name="textView49">email</string>
    <string name="textView50">Username</string>
    <string name="textView51">Password</string>
    <string name="button8">Save</string>
    <string name="button9">Cancel</string>
    <string name="textView56">Expense</string>
    <string name="textView55">Income</string>


    //dashboard
    <string name="textView34">Dashboard</string>
    <string name="textView35">Income</string>
    <string name="textView36">Expense</string>
    <string name="textView37">80000.00</string>
    <string name="textView38">5000.00</string>
    <string name="textView39">Income</string>
    <string name="textView40">Expense</string>
    <string name="textView41">Date</string>
    <string name="textView42">Reason</string>
    <string name="textView43">Amount</string>
    <string name="button12">Update</string>
    <string name="button13">Delete</string>


    //new_dashboard__expense_adding
    <string name="textView52">Date</string>
    <string name="textView53">Reason</string>
    <string name="textView54">Amount</string>
    <string name="Plaintext15">22.02.2023</string>
    <string name="Plaintext16">Lunch</string>
    <string name="Plaintext17">6000</string>
    <string name="button10">Save</string>
    <string name="button11">Cancel</string>

    //addnew_income_dashboard
    <string name="textView61">Date</string>
    <string name="textView62">Reason</string>
    <string name="textView63">Amount</string>
    <string name="Plaintext18">03.02.2023</string>
    <string name="Plaintext19">Salary</string>
    <string name="Plaintext20">2500</string>
    <string name="Plaintext21">Interest</string>
    <string name="button17">Save</string>
    <string name="button18">Cancel</string>


    //first page
    <string name="button14">Login</string>
    <string name="button15">Signup</string>
    <string name="textView60">OR</string>


</resources>